[EK] More collection constraints